--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  --primary: #646681;
+  --secondary: #585858;
+  --bg-primary: #f8f8ff;
+  --bg-secondary: #ecedf6;
+  --primary-blue: #1876d2;
+  --secondary-grey: #cccdde;
+  --danger: #ff4b4b;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Ubuntu", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--bg-primary);
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
